RESOLVED FIXED112664
Web Inspector: [Styles] Matching @host rule children are not displayed
https://bugs.webkit.org/show_bug.cgi?id=112664
Summary Web Inspector: [Styles] Matching @host rule children are not displayed
Alexander Pavlov (apavlov)
Reported 2013-03-18 23:45:49 PDT
Currently, styles specified in @host rules show up under Computed Styles for the host node but it would be good to see them under Styles, too. Upstreaming https://code.google.com/p/chromium/issues/detail?id=191427
Attachments
Patch (6.24 KB, patch)
2013-03-19 00:23 PDT, Alexander Pavlov (apavlov)
no flags
Alexander Pavlov (apavlov)
Comment 1 2013-03-19 00:23:56 PDT
WebKit Review Bot
Comment 2 2013-03-19 00:52:46 PDT
Comment on attachment 193751 [details] Patch Clearing flags on attachment: 193751 Committed r146184: <http://trac.webkit.org/changeset/146184>
WebKit Review Bot
Comment 3 2013-03-19 00:52:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.