Web Inspector: [Styles] Matching @host rule children are not displayed https://bugs.webkit.org/show_bug.cgi?id=112664

Reviewed by Vsevolod Vlasov.

Source/WebCore:

Process host rules' contents akin to media rules' when handling the CSS model and source data.

Test: platform/chromium/inspector/styles/host-rules.html

* inspector/InspectorStyleSheet.cpp:
(flattenSourceData):
(WebCore::asCSSRuleList):

LayoutTests:

* platform/chromium/inspector/styles/host-rules-expected.txt: Added.
* platform/chromium/inspector/styles/host-rules.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@146184 bbb929c8-8fbe-4397-9dbb-9b2b20218538